syntax = "proto3";

package userpb;

option go_package = "./userpb";

// --- 用户数据结构 ---
message User {
  int64 id = 1;
  string username = 2;
  string password = 3; // 实际应加密存储
  string role = 4;
  string nickname=5;
}

message UserInfo{
  int64 id=1;
  string nickname=2;
  string role=3;
}

// --- 登录 ---
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int64 expires = 2;
}

// --- 注册 ---
message RegisterRequest {
  string username = 1;
  string password = 2;
  string nickname=3;
}

message RegisterResponse {
  string token = 1;
  int64 expires = 2;
}

// --- 修改用户名 ---
message UpdateNicknameRequest {
  int64 Id = 1;
  string new_nickname = 2;
}

message UpdateNicknameResponse { string Msg = 1; }

// --- 修改密码 ---
message UpdatePasswordRequest {
  int64 Id = 1;
  string new_password = 2;
}

message UpdatePasswordResponse { string Msg = 1; }

message GenerateTokenReq { int64 userId = 1; }

message GenerateTokenResp {
  string access_token = 1; // 访问 token
  int64 access_expire = 2; // 过期时间（Unix 时间戳）
  int64 refresh_after = 3; // 建议刷新时间（Unix 时间戳）
}

message GetUserRoleRequest{
  int64 id=1;
}

message GetUserRoleResponse{
  string role=1;
}

// --- GetUser ---
message GetUserInfoRequest { 
  int64 Id = 1; 
}

message GetUserInfoResponse { 
  UserInfo user=1;
}

// --- BatchGetUsers ---
message BatchGetUsersInfoRequest { 
  repeated int64 ids=1;
}

message BatchGetUsersInfoResponse { 
 repeated UserInfo users=1;
}

// 用户服务定义
service usercenter {
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
  // 用户注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
  // 修改用户名
  rpc UpdateNickname(UpdateNicknameRequest) returns (UpdateNicknameResponse);
  // 修改密码
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
  // 生成 token
  rpc GenerateToken(GenerateTokenReq) returns (GenerateTokenResp);

  rpc GetUserRole(GetUserRoleRequest) returns (GetUserRoleResponse);

  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);

  rpc GetUsersInfo(BatchGetUsersInfoRequest) returns (BatchGetUsersInfoResponse);
}